# resynthesizer-cli

./: .gitignore  Dockerfile  README.md  index.js  package-lock.json  package.json
app/: CMakeLists.txt  buildSwitches.h  cli.c  engineTypes.h
